--- a/.gitignore
+++ b/.gitignore
@@ -28,9 +28,9 @@ yarn-error.*
 .DS_Store
 *.pem
 
-# local env files
-.env*.local
-.env
+# # local env files
+# .env*.local
+# .env
 
 # typescript
 *.tsbuildinfo
